# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  25 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Don't rename bridged or bonded interfaces either, #145581.

  19 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Start scheduled services in the correct order, #148011.

  06 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Fix PPPoA usage, #144194 thanks to Giampaolo Tomassoni.

    iproute2 netlink check has been moved to the ebuild.

    When stopping a ppp link, don't remove the IP address, #145034.

  05 Sep 2006; Roy Marples <uberlord@gentoo.org>:
  
    wpa_supplicant packet socket checks have been moved to the ebuild.

  21 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Each dhcp client now supports global options - ie dhcpcd="-a"

    Classical IP over ATM support has been added, #108153 thanks to
    Giampaolo Tomassoni. Note that he will not support the module and no
    Gentoo devs have the hardware so any bugs reported may take time to fix.

  18 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Don't stop services that are depended on by coldplugged services.

  17 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Document ppp plugin options, #144194.

    Allow RC_NEED_$iface to work in the same was as RC_NEED.

  16 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Fix typo's in net.example, #144144 thanks to Christian 'Opfer' Faulhammer.

    /sys/class/net/$iface/wireless means it's a wireless device too in
    iwconfig.sh and wpa_supplicant.sh

  15 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Fix start-stop-daemon using the --name option
    #143951 thanks to Dustin J. Mitchell

    Support old gateway variable with iproute2.
    arpinging of available address can be disabled with
    modules=( "!arping" )

  14 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Only send a process the TERM signal once, #141832
